--- a/scp-streams.cabal
+++ b/scp-streams.cabal
@@ -16,7 +16,8 @@ source-repository head
   location: git://github.com/noteed/scp-streams.git
 
 library
-  build-depends:       base == 4.*,
+  build-depends:       attoparsec == 0.10.*,
+                       base == 4.*,
                        bytestring == 0.9.*,
                        io-streams == 1.1.*,
                        process == 1.1.*
