--- a/scp-streams.cabal
+++ b/scp-streams.cabal
@@ -15,6 +15,10 @@ source-repository head
   type: git
   location: git://github.com/noteed/scp-streams.git
 
+flag scp-debug
+  description: Add SCP debug output that are visible client-side.
+  default: False
+
 library
   build-depends:       attoparsec == 0.10.*,
                        base == 4.*,
@@ -23,6 +27,8 @@ library
                        process == 1.1.*
   exposed-modules:     Network.SCP.Protocol,
                        Network.SCP.Types
+  if flag(scp-debug)
+    cpp-options: -DSCP_DEBUG
   ghc-options:         -Wall
 
 executable scp-streams
