--- a/scp-streams.cabal
+++ b/scp-streams.cabal
@@ -44,9 +44,9 @@ executable scp-streams
                        unix == 2.5.*
   ghc-options:         -Wall
 
-executable scp-broken-upload
+executable scp-tool
   hs-source-dirs:      bin
-  main-is:             scp-broken-upload.hs
+  main-is:             scp-tool.hs
   build-depends:       base == 4.*,
                        bytestring == 0.9.*,
                        io-streams == 1.1.*,
